--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://secure.example.com; script-src 'self' https://secure.example.com;">
   <title>Blood & Organ Donor Match</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -15,15 +17,15 @@
       </div>
     </div>
     <div class="login-buttons">
-      <a href="file:///E:/ResQLink/login_user.html" class="btn">User Login</a>
-      <a href="file:///E:/ResQLink/login_admin.html" class="btn">Admin Login</a>
+      <a href="login_user.html" class="btn">User Login</a>
+      <a href="login_admin.html" class="btn">Admin Login</a>
     </div>
   </header>
 
   <nav class="navbar">
-    <a href="file:///E:/ResQLink/index.html" class="btn">Home</a>
-    <a href="file:///E:/ResQLink/check.html" class="btn">Check Availability</a>
-    <a href="file:///E:/ResQLink/dashboard.html" class="btn">Dashboard</a>
+    <a href="index.html" class="btn">Home</a>
+    <a href="check.html" class="btn">Check Availability</a>
+    <a href="dashboard.html" class="btn">Dashboard</a>
   </nav>
 
   <section class="main-banner">
@@ -31,7 +33,7 @@
       <h1>Donate Organs - Save Lives :)</h1>
       <p class="subtext">Join the mission to give life a second chance.</p>
       <p class="quote">"The gift of life is the greatest legacy one can leave."</p>
-      <a href="file:///E:/ResQLink/register.html" class="register-btn">Register Now</a>
+      <a href="register.html" class="register-btn">Register Now</a>
     </div>
 
     <div class="banner-image">
@@ -60,10 +62,10 @@
   <section class="sponsors">
     <h2>Our Sponsors</h2>
     <div class="sponsor-logos">
-      <img src="https://logowik.com/content/uploads/images/national-health-authority6597.jpg">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQzMQEsfu2VjFNb-HbMX0uSrQsdRq4jtLwSvg&s">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSn_jXzHYb0G-dfDIbN6s7Nt9ZN1hM4uEhYLg&s">
-      <img src="https://upload.wikimedia.org/wikipedia/en/thumb/9/95/Digital_India_logo.svg/800px-Digital_India_logo.svg.png">
+      <img src="https://logowik.com/content/uploads/images/national-health-authority6597.jpg" alt="National Health Authority">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQzMQEsfu2VjFNb-HbMX0uSrQsdRq4jtLwSvg&s" alt="Sponsor 2">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSn_jXzHYb0G-dfDIbN6s7Nt9ZN1hM4uEhYLg&s" alt="Sponsor 3">
+      <img src="https://upload.wikimedia.org/wikipedia/en/thumb/9/95/Digital_India_logo.svg/800px-Digital_India_logo.svg.png" alt="Digital India">
     </div>
   </section>
 
