--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
       </div>
     </div>
     <div class="login-buttons">
-      <a href="login_user.html" class="btn">User Login</a>
-      <a href="login_admin.html" class="btn">Admin Login</a>
+      <a href="#" class="btn">User Login</a>
+      <a href="#" class="btn">Admin Login</a>
     </div>
   </header>
 
   <nav class="navbar">
-    <a href="index.html" class="btn">Home</a>
-    <a href="check.html" class="btn">Check Availability</a>
-    <a href="dashboard.html" class="btn">Dashboard</a>
+    <a href="#" class="btn">Home</a>
+    <a href="#" class="btn">Check Availability</a>
+    <a href="#" class="btn">Dashboard</a>
   </nav>
 
   <section class="main-banner">
