--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://secure.example.com; script-src 'self' https://secure.example.com;">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://encrypted-tbn0.gstatic.com https://media.istockphoto.com; script-src 'self'; style-src 'self' https://fonts.googleapis.com;">
   <title>Blood & Organ Donor Match</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -17,12 +17,14 @@
       </div>
     </div>
     <div class="login-buttons">
+      <!-- Placeholder links for now -->
       <a href="#" class="btn">User Login</a>
       <a href="#" class="btn">Admin Login</a>
     </div>
   </header>
 
   <nav class="navbar">
+    <!-- Placeholder links for now -->
     <a href="#" class="btn">Home</a>
     <a href="#" class="btn">Check Availability</a>
     <a href="#" class="btn">Dashboard</a>
@@ -33,11 +35,9 @@
       <h1>Donate Organs - Save Lives :)</h1>
       <p class="subtext">Join the mission to give life a second chance.</p>
       <p class="quote">"The gift of life is the greatest legacy one can leave."</p>
-      <a href="register.html" class="register-btn">Register Now</a>
+      <!-- Placeholder link for now -->
+      <a href="#" class="register-btn">Register Now</a>
     </div>
-
-   
-
   </section>
 
   <section class="info-boxes">
