--- a/index.html
+++ b/index.html
@@ -3,76 +3,56 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https://encrypted-tbn0.gstatic.com https://media.istockphoto.com; script-src 'self'; style-src 'self' https://fonts.googleapis.com;">
-  <title>Blood & Organ Donor Match</title>
+  <title>Blood & Organ Donation Portal</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="header">
-    <div class="org-info">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTz5oN5PL8pnmo77l40Aak3ZOgUkttBscPjWzDIu0gKblNzJ9I36zQNEoMifwVUGHvW1gs&usqp=CAU" alt="Logo" class="logo">
-      <div>
-        <h2>Blood & Organ Donation Matchmaking Portal</h2>
-        <p>Under National Health Mission<br>Government of India</p>
-      </div>
-    </div>
-    <div class="login-buttons">
-      <!-- Placeholder links for now -->
-      <a href="#" class="btn">User Login</a>
-      <a href="#" class="btn">Admin Login</a>
-    </div>
+
+  <!-- Navigation Bar -->
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Login</a></li>
+        <li><a href="#">Search</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <nav class="navbar">
-    <!-- Placeholder links for now -->
-    <a href="#" class="btn">Home</a>
-    <a href="#" class="btn">Check Availability</a>
-    <a href="#" class="btn">Dashboard</a>
-  </nav>
-
-  <section class="main-banner">
+  <!-- Main Section with Background Image -->
+  <section class="main-section">
     <div class="main-text">
-      <h1>Donate Organs - Save Lives :)</h1>
-      <p class="subtext">Join the mission to give life a second chance.</p>
-      <p class="quote">"The gift of life is the greatest legacy one can leave."</p>
-      <!-- Placeholder link for now -->
-      <a href="#" class="register-btn">Register Now</a>
+      <h1>Blood & Organ Donation Portal</h1>
+      <p>Your act of kindness can save lives. Join us in the mission to donate blood and organs and give someone a chance at life.</p>
     </div>
   </section>
 
-  <section class="info-boxes">
-    <div class="info-box">
-      <img src="https://media.istockphoto.com/id/1415405974/photo/blood-donor-at-donation-with-bouncy-ball-holding-in-hand.jpg?s=612x612&w=0&k=20&c=j0nkmkJxIP6U6TsI3yTq8iuc0Ufhq6xoW4FSMlKaG6A=" alt="Blood Donation">
-      <p>Blood donation is a vital, accessible way to support patients requiring transfusions for surgeries, trauma, or treatments for conditions like cancer or anemia.</p>
+  <!-- Description Section -->
+  <section class="description">
+    <h2>About This App</h2>
+    <p>This portal connects donors and recipients for blood and organ donations. It facilitates finding matches between donors and patients in need, ensuring that no one has to wait long for a lifesaving transplant or transfusion. Together, we can make a difference!</p>
+  </section>
+
+  <!-- Images Section -->
+  <section class="image-gallery">
+    <div class="image-box">
+      <img src="https://via.placeholder.com/300x200?text=Blood+Donation" alt="Blood Donation">
+      <p>Blood Donation saves lives by providing the necessary blood for surgeries and treatments.</p>
     </div>
-    <div class="info-box">
-      <img src="https://media.istockphoto.com/id/1424846709/vector/organ-donation-3d-vector-saving-life-concept.jpg?s=612x612&w=0&k=20&c=vd6YJvrKfatEfE4GDlMDRRXAazSHCfgLHxkwTfZOxGM=" alt="Organ Donation">
-      <p>Organ donation is a selfless act that can save or transform the lives of individuals suffering from organ failure.</p>
+    <div class="image-box">
+      <img src="https://via.placeholder.com/300x200?text=Organ+Donation" alt="Organ Donation">
+      <p>Organ Donation gives people the chance to continue living through selfless acts of generosity.</p>
     </div>
-    <div class="info-box">
-      <img src="https://media.istockphoto.com/id/836452962/photo/heart-transplant-and-organ-donation-concept-hand-is-giving-red-heart.jpg?s=612x612&w=0&k=20&c=TexE1ZQEUt6Sr2q2CxKUfnC8TJCRm3dlINlcBgsXUbc=" alt="Who can donate?">
-      <p>Any person not less than 18 years of age, who voluntarily authorizes the removal of any of his organ and/or tissue…</p>
+    <div class="image-box">
+      <img src="https://via.placeholder.com/300x200?text=Join+Now" alt="Join Now">
+      <p>Join our community of donors and help save lives today. Register and make a difference!</p>
     </div>
   </section>
 
-  <section class="sponsors">
-    <h2>Our Sponsors</h2>
-    <div class="sponsor-logos">
-      <img src="https://logowik.com/content/uploads/images/national-health-authority6597.jpg" alt="National Health Authority">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQzMQEsfu2VjFNb-HbMX0uSrQsdRq4jtLwSvg&s" alt="Sponsor 2">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSn_jXzHYb0G-dfDIbN6s7Nt9ZN1hM4uEhYLg&s" alt="Sponsor 3">
-      <img src="https://upload.wikimedia.org/wikipedia/en/thumb/9/95/Digital_India_logo.svg/800px-Digital_India_logo.svg.png" alt="Digital India">
-    </div>
-  </section>
-
-  <section class="contact">
-    <h2>Contact Us</h2>
-    <p>Email: support@donormatch.gov.in | Phone: 1800-000-000</p>
-    <p>Address: Ministry of Health, New Delhi, India</p>
-  </section>
-
-  <footer class="footer">
-    <p>© 2025 Blood & Organ Donation | Ministry of Health, India</p>
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Blood & Organ Donation Portal | All Rights Reserved</p>
   </footer>
+
 </body>
 </html>
