--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
   <!-- Images Section -->
   <section class="image-gallery">
     <div class="image-box">
-      <img src="https://via.placeholder.com/300x200?text=Blood+Donation" alt="Blood Donation">
+      <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.emro.who.int%2Fmedia%2Fnews%2Fworld-blood-donor-day-2014.html&psig=AOvVaw2ROTZA8JRW-ZM71sC8-PZ2&ust=1749353093339000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCIiDraSu3o0DFQAAAAAdAAAAABAE" alt="Blood Donation">
       <p>Blood Donation saves lives by providing the necessary blood for surgeries and treatments.</p>
     </div>
     <div class="image-box">
-      <img src="https://via.placeholder.com/300x200?text=Organ+Donation" alt="Organ Donation">
+      <img src="https://www.shutterstock.com/image-vector/blood-donation-vector-illustration-red-260nw-737116375.jpg" alt="Organ Donation">
       <p>Organ Donation gives people the chance to continue living through selfless acts of generosity.</p>
     </div>
     <div class="image-box">
-      <img src="https://via.placeholder.com/300x200?text=Join+Now" alt="Join Now">
+      <img src="https://media.istockphoto.com/id/1415405974/photo/blood-donor-at-donation-with-bouncy-ball-holding-in-hand.jpg?s=612x612&w=0&k=20&c=j0nkmkJxIP6U6TsI3yTq8iuc0Ufhq6xoW4FSMlKaG6A=" alt="Join Now">
       <p>Join our community of donors and help save lives today. Register and make a difference!</p>
     </div>
   </section>
