--- a/index.html
+++ b/index.html
@@ -1,57 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blood & Organ Donation Portal</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Blood & Organ Donation</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
-  <!-- Navigation Bar -->
-  <header>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Login</a></li>
-        <li><a href="#">Search</a></li>
-      </ul>
-    </nav>
+  <!-- Header -->
+  <header class="top-bar">
+    <div class="logo-text">
+      <img src="https://m.economictimes.com/thumb/msid-83502809,width-1200,height-900,resizemode-4,imgsize-353228/blood-donation_istock.jpg" alt="Logo" class="logo" />
+      <span class="nhm-text">Under National Health Mission</span>
+    </div>
+    <div class="login-buttons">
+      <button class="login-btn">User Login</button>
+      <button class="login-btn">Admin Login</button>
+    </div>
   </header>
 
-  <!-- Main Section with Background Image -->
-  <section class="main-section">
-    <div class="main-text">
-      <h1>Blood & Organ Donation Portal</h1>
-      <p>Your act of kindness can save lives. Join us in the mission to donate blood and organs and give someone a chance at life.</p>
-    </div>
+  <!-- Navigation Bar -->
+  <nav class="nav-bar">
+    <button class="nav-btn">Home</button>
+    <button class="nav-btn">Check Availability</button>
+    <button class="nav-btn">Dashboard</button>
+  </nav>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <h1>Donate Organs - Save Lives</h1>
+    <p>Join the mission to give life a second chance</p>
+    <button class="register-btn">Register Now</button>
   </section>
 
-  <!-- Description Section -->
-  <section class="description">
-    <h2>About This App</h2>
-    <p>This portal connects donors and recipients for blood and organ donations. It facilitates finding matches between donors and patients in need, ensuring that no one has to wait long for a lifesaving transplant or transfusion. Together, we can make a difference!</p>
-  </section>
-
-  <!-- Images Section -->
-  <section class="image-gallery">
-    <div class="image-box">
-      <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.emro.who.int%2Fmedia%2Fnews%2Fworld-blood-donor-day-2014.html&psig=AOvVaw2ROTZA8JRW-ZM71sC8-PZ2&ust=1749353093339000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCIiDraSu3o0DFQAAAAAdAAAAABAE" alt="Blood Donation">
-      <p>Blood Donation saves lives by providing the necessary blood for surgeries and treatments.</p>
-    </div>
-    <div class="image-box">
-      <img src="https://www.shutterstock.com/image-vector/blood-donation-vector-illustration-red-260nw-737116375.jpg" alt="Organ Donation">
-      <p>Organ Donation gives people the chance to continue living through selfless acts of generosity.</p>
-    </div>
-    <div class="image-box">
-      <img src="https://media.istockphoto.com/id/1415405974/photo/blood-donor-at-donation-with-bouncy-ball-holding-in-hand.jpg?s=612x612&w=0&k=20&c=j0nkmkJxIP6U6TsI3yTq8iuc0Ufhq6xoW4FSMlKaG6A=" alt="Join Now">
-      <p>Join our community of donors and help save lives today. Register and make a difference!</p>
-    </div>
+  <!-- Image Section -->
+  <section class="images-section">
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.emro.who.int%2Fmedia%2Fnews%2Fworld-blood-donor-day-2014.html&psig=AOvVaw2ROTZA8JRW-ZM71sC8-PZ2&ust=1749353093339000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCIiDraSu3o0DFQAAAAAdAAAAABAE" alt="Blood Donation" />
+    <img src="https://www.shutterstock.com/image-vector/blood-donation-vector-illustration-red-260nw-737116375.jpg" alt="Organ Donation" />
+    <img src="https://media.istockphoto.com/id/1415405974/photo/blood-donor-at-donation-with-bouncy-ball-holding-in-hand.jpg?s=612x612&w=0&k=20&c=j0nkmkJxIP6U6TsI3yTq8iuc0Ufhq6xoW4FSMlKaG6A=" alt="Volunteering" />
   </section>
 
   <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Blood & Organ Donation Portal | All Rights Reserved</p>
+  <footer class="footer">
+    <p>&copy; 2025 National Health Mission | Promoting Blood and Organ Donation | All Rights Reserved</p>
   </footer>
 
 </body>
